After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750252 - audiointerleave: Crash when channel-positions-from-input=1 and channel-positions unset
audiointerleave: Crash when channel-positions-from-input=1 and channel-positi...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-01 23:30 UTC by Nicolas Dufresne (ndufresne)
Modified: 2015-06-01 23:54 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Nicolas Dufresne (ndufresne) 2015-06-01 23:30:45 UTC
Audio interleave crash if channel-positions-from-input is set to FALSE and channel-positions is not set. The reason of the crash is that there is no default positionning, which lead to channels=0, bps=0, hence an allocation of size 0 and call to gst_buffer_map() to fail. Additionnally, gst_buffer_map() calles are systematically unchecked (even the one from the outside world.

To reproduce:
gst-launch-1.0 pulsesrc ! audiointerleave channel-positions-from-input=0 ! pulsesink
Comment 1 Vineeth 2015-06-01 23:40:55 UTC
i guess it is similar to interleave crash raised in https://bugzilla.gnome.org/show_bug.cgi?id=744211
Comment 2 Olivier Crête 2015-06-01 23:45:12 UTC
Fixed:

commit db5b3b5c4124f340f9bf784a6db7141868febce2
Author: Olivier Crête <olivier.crete@collabora.com>
Date:   Mon Jun 1 19:43:20 2015 -0400

    audiointerleave: Always have "channels" be the actual pad count
    
    Don't force it anywhere
    
    https://bugzilla.gnome.org/show_bug.cgi?id=750252
Comment 3 Olivier Crête 2015-06-01 23:54:04 UTC
(In reply to Vineeth from comment #1)
> i guess it is similar to interleave crash raised in
> https://bugzilla.gnome.org/show_bug.cgi?id=744211

This bug is about audiointerleave, the other one is the old interleave, which has different code.


I plan on writing unit tests for the various scenarios in audiointerleave so we can make sure they work.