audiointerleave: Always have "channels" be the actual pad count

Don't force it anywhere

https://bugzilla.gnome.org/show_bug.cgi?id=750252